stm32f403xc, stm32f4discovery

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ members = [
     "boards/nucleo_f446re",
     "boards/redboard_artemis_nano",
     "boards/stm32f3discovery",
+    "boards/stm32f4discovery",
     "boards/stm32f412gdiscovery",
     "boards/nano33ble",
     "capsules",
@@ -42,6 +43,7 @@ members = [
     "chips/stm32f429zi",
     "chips/stm32f446re",
     "chips/stm32f412g",
+    "chips/stm32f403xc",
     "chips/stm32f4xx",
     "kernel",
     "libraries/enum_primitive",
